--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color: #53c28b !important;
 }
 
 @theme inline {
@@ -19,8 +20,46 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: #111;
+  color: #bbb;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.theme {
+  transition: 1s all ease;
+}
+
+.theme.light {
+  background-color: white;
+  color: #111;
+}
+
+.theme.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
+
+.container {
+  max-width: 1633px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
