--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,3 +63,8 @@ a {
   flex-direction: column;
   justify-content: space-between;
 }
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 20px;
+  }
+}
