--- a/src/app/portfolio/page.module.css
+++ b/src/app/portfolio/page.module.css
@@ -10,7 +10,8 @@
 }
 
 .items {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 50px;
 }
 
@@ -43,4 +44,17 @@
 
 .item:hover .title {
   color: var(--primary-color);
+}
+
+@media (max-width: 992px) {
+  .items {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    gap: 20px;
+  }
+  .item {
+    width: 100%;
+  }
+  .mainTitle {
+    font-size: 50px;
+  }
 }
