--- a/src/components/HeroSection/Hero.module.css
+++ b/src/components/HeroSection/Hero.module.css
@@ -34,8 +34,29 @@
   }
 }
 
-
 .desc {
   font-size: 24px;
   font-weight: 300;
+}
+
+@media (max-width: 992px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+    gap: 50px;
+  }
+  .img {
+    height: 500px;
+  }
+  .item {
+    align-items: center;
+    gap: 30px;
+  }
+  .title {
+    font-size: 32px;
+  }
+  .desc {
+    font-size: 20px;
+  }
+  
 }
