--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,41 +1,54 @@
-.container {
-}
 
 .top {
   display: flex;
+  gap: 40px;
+  align-items: center;
 }
 
 .info {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 20px;
 }
 
-.title{
-  font-size: 40px;
+.title {
+  font-size: 42px;
+  font-weight: 800;
+  line-height: 1.2;
 }
 
-.desc{
+.desc {
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
+  color: #aaa;
+  line-height: 1.6;
 }
 
 .author {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 12px;
 }
 
 .avatar {
   object-fit: cover;
   border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.username {
+  font-size: 14px;
+  color: #ccc;
 }
 
 .imageContainer {
   flex: 1;
-  height: 300px;
   position: relative;
+  height: 350px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .image {
@@ -43,9 +56,51 @@
 }
 
 .content {
-  margin-top: 50px;
-  font-size: 20px;
-  font-weight: 300;
-  color: #999;
+  max-width: 800px;
+  margin: 80px auto 0;
+}
+
+.text {
+  font-size: 18px;
+  font-weight: 400;
+  color: #bbb;
+  line-height: 1.9;
   text-align: justify;
+}
+
+
+@media (max-width: 768px) {
+  .top {
+    flex-direction: column;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .desc {
+    font-size: 16px;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 400px;
+    position: relative !important;
+    flex: none;
+  }
+
+  .info {
+    align-items: center;
+    text-align: center;
+  }
+
+  .content {
+    margin-top: 50px;
+  }
+
+  .text {
+    font-size: 16px;
+    line-height: 1.8;
+    text-align: center;
+  }
 }
